--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -9,15 +9,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+        android:text="name"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/txtTitle"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/txtDescription"
-        />
+        android:text="descriptions"
+        android:id="@+id/txtDescription" />
 
 </LinearLayout>
